2007-10-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxItemToolboxLoader.cs:
	  Initialize Gtk before trying to load the toolbox item. Needed since this
	  is done out of process.

2007-10-03  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/ItemToolboxNode.cs: Implement
	  IComparable so that the ToolboxService's array sort doesn't break on
	  non-GTK#-component toolbox nodes. Fixes AspNetEdit.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Bump MD version.

2007-09-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.CodeBehind/CodeBehindProjectFileExtension.cs:
	  In BuildChildNodes, don't assume that HasChildNodes is false, because
	  other extensions may have added children to this node.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.DesignerSupport.Toolbox.ComponentSelectorDialog.cs,
	  gtk-gui/gui.stetic: Regenerated GUI files.
	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Added NodeView subclass
	  and overrided OnDragDataDelete. This is necessary to avoid a GTK warning
	  about the need to override drag_data_delete.

2007-09-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/BindingService.cs,
	  MonoDevelop.DesignerSupport/OpenDocumentFileProvider.cs, Makefile.am:
	  Make OpenDocumentFileProvider publicly accessible so it can be used
	  elsewhere.

2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/CodeBehindService.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindMissingClassBuilder.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindProjectFileExtension.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindClassEventArgs.cs,